Add new domain rules and clean up unused files
Added several domain rules across multiple categories, including Game.conf and ProxyList.conf, to improve domain matching. Deleted unused Extra-Direct.conf and Extra-Proxy.conf files for better structure and maintenance.

添加新的域规则并清理未使用的文件

在多个类别中添加了多个域规则，包括Game.conf和ProxyList.conf，以改善域匹配。删除了未使用的Extra-Direct.conf和Extra-Proxy.conf文件，以获得更好的结构和维护。

--- a/BaseRule/ProxyList.conf
+++ b/BaseRule/ProxyList.conf
@@ -188,6 +188,7 @@ DOMAIN-SUFFIX,actimes.com.au
 DOMAIN-SUFFIX,activpn.com
 DOMAIN-SUFFIX,aculo.us
 DOMAIN-SUFFIX,adcex.com
+DOMAIN-SUFFIX,adguardaccount.com
 DOMAIN-SUFFIX,addictedtocoffee.de
 DOMAIN-SUFFIX,adelaidebbs.com
 DOMAIN-SUFFIX,admob.com
@@ -210,6 +211,7 @@ DOMAIN-SUFFIX,afr.com
 DOMAIN-SUFFIX,afreecatv.com
 DOMAIN-SUFFIX,agnesb.fr
 DOMAIN-SUFFIX,agro.hk
+DOMAIN-SUFFIX,agrd.io
 DOMAIN-SUFFIX,ai-kan.net
 DOMAIN-SUFFIX,ai-wen.net
 DOMAIN-SUFFIX,aiph.net
@@ -2035,6 +2037,7 @@ DOMAIN-SUFFIX,greenreadings.com
 DOMAIN-SUFFIX,greenvpn.net
 DOMAIN-SUFFIX,greenvpn.org
 DOMAIN-SUFFIX,grindr.com
+DOMAIN-SUFFIX,grizzlysms.com
 DOMAIN-SUFFIX,grotty-monday.com
 DOMAIN-SUFFIX,gs-discuss.com
 DOMAIN-SUFFIX,gsearch.media
@@ -4109,6 +4112,7 @@ DOMAIN-SUFFIX,scmpchinese.com
 DOMAIN-SUFFIX,scramble.io
 DOMAIN-SUFFIX,scribd.com
 DOMAIN-SUFFIX,scriptspot.com
+DOMAIN-SUFFIX,seagm.com
 DOMAIN-SUFFIX,search.com
 DOMAIN-SUFFIX,search.xxx
 DOMAIN-SUFFIX,searchtruth.com
@@ -4117,7 +4121,7 @@ DOMAIN-SUFFIX,seatguru.com
 DOMAIN-SUFFIX,seattlefdc.com
 DOMAIN-SUFFIX,secretchina.com
 DOMAIN-SUFFIX,secretgarden.no
-DOMAIN-SUFFIX,secretsline.biz
+DOMAIN-SUFFIX,secretsline.bizvc
 DOMAIN-SUFFIX,secureservercdn.net
 DOMAIN-SUFFIX,securetunnel.com
 DOMAIN-SUFFIX,securityinabox.org
@@ -5373,6 +5377,7 @@ DOMAIN-SUFFIX,whoer.net
 DOMAIN-SUFFIX,whotalking.com
 DOMAIN-SUFFIX,whylover.com
 DOMAIN-SUFFIX,whyx.org
+DOMAIN-SUFFIX,wi.se
 DOMAIN-SUFFIX,widevine.com
 DOMAIN-SUFFIX,wikaba.com
 DOMAIN-SUFFIX,wikia.com
@@ -5509,6 +5514,7 @@ DOMAIN-SUFFIX,xiezhua.com
 DOMAIN-SUFFIX,xihua.es
 DOMAIN-SUFFIX,xinbao.de
 DOMAIN-SUFFIX,xing.com
+DOMAIN-SUFFIX,xinggogo.com
 DOMAIN-SUFFIX,xinhuanet.org
 DOMAIN-SUFFIX,xinjiangpolicefiles.org
 DOMAIN-SUFFIX,xinmiao.com.hk
@@ -5713,6 +5719,8 @@ DOMAIN-SUFFIX,zkiz.com
 DOMAIN-SUFFIX,zmw.cn
 DOMAIN-SUFFIX,zodgame.us
 DOMAIN-SUFFIX,zoho.com
+DOMAIN-SUFFIX,zoho.com.au
+DOMAIN-SUFFIX,zoho.in
 DOMAIN-SUFFIX,zohocdn.com
 DOMAIN-SUFFIX,zohopublic.com
 DOMAIN-SUFFIX,zomobo.net
