Refactor domain rules for clarity and updated coverage
Removed redundant domain entries from `HK.conf` and relocated them to `DirectList.conf` for better organization. Added new domains for Telegram, financial services, and others across respective rule files. This improves structure and ensures accurate proxy handling.

重构域规则以提高清晰度和更新覆盖范围
从 HK.conf 中移除冗余的域条目并将它们重新定位到 DirectList.conf 以便更好地组织。在各自的规则文件中添加了 Telegram、金融服务和其他的新域。这改善了结构并确保了准确的代理处理。

--- a/BaseRule/DirectList.conf
+++ b/BaseRule/DirectList.conf
@@ -4,6 +4,21 @@ DOMAIN-SUFFIX,warehouse.parkson-market.org
 #中国银行
 DOMAIN-SUFFIX,boc.cn
 
+#HSBC HK
+DOMAIN-SUFFIX,hsbc.com.hk
+
+# ZA BANK
+DOMAIN-SUFFIX,zafinsvc.com
+DOMAIN-SUFFIX,zajourney.com
+DOMAIN-SUFFIX,za.group
+
+# BOC HK
+DOMAIN-SUFFIX,bochk.com
+
+#DuoLinGo
+DOMAIN-SUFFIX,duolingo.com
+DOMAIN-SUFFIX,duolingo.cn
+
 # 财新
 DOMAIN-SUFFIX,caixin.cn
 DOMAIN-SUFFIX,caixin.com
