--- a/BaseRule/ProxyList.conf
+++ b/BaseRule/ProxyList.conf
@@ -3500,6 +3500,7 @@ DOMAIN-SUFFIX,okex.com
 DOMAIN-SUFFIX,okk.tw
 DOMAIN-SUFFIX,okx.com
 DOMAIN-SUFFIX,okx.com.cdn.cloudflare.net
+DOMAIN-SUFFIX,okx.vote
 DOMAIN-SUFFIX,olabloga.pl
 DOMAIN-SUFFIX,old-cat.net
 DOMAIN-SUFFIX,olehdtv.com
@@ -4810,6 +4811,7 @@ DOMAIN-SUFFIX,tokyocn.com
 DOMAIN-SUFFIX,tomonews.net
 DOMAIN-SUFFIX,tongil.or.kr
 DOMAIN-SUFFIX,tono-oka.jp
+DOMAIN-SUFFIX,tonapi.io
 DOMAIN-SUFFIX,tonyyan.net
 DOMAIN-SUFFIX,tonyding.net
 DOMAIN-SUFFIX,toodoc.com
@@ -5543,6 +5545,7 @@ DOMAIN-SUFFIX,xnxx.com
 DOMAIN-SUFFIX,xpdo.net
 DOMAIN-SUFFIX,xpud.org
 DOMAIN-SUFFIX,xrentdvd.com
+DOMAIN-SUFFIX,xrpminer.xyz
 DOMAIN-SUFFIX,xsden.info
 DOMAIN-SUFFIX,xskywalker.com
 DOMAIN-SUFFIX,xskywalker.net
