Update domain rules and remove unused temp.conf file
Added multiple domains to `special.conf` and `ProxyList.conf` to enhance coverage. Removed `temp.conf` as it is no longer needed.

更新域规则并删除未使用的 temp.conf 文件

将多个域添加到 `special.conf` 和 `ProxyList.conf` 中以增强覆盖范围。删除了 `temp.conf` 因为它不再需要。

--- a/BaseRule/ProxyList.conf
+++ b/BaseRule/ProxyList.conf
@@ -26,6 +26,7 @@ DOMAIN-KEYWORD,whatsapp
 # GFW list
 DOMAIN-SUFFIX,gfwlist.start
 DOMAIN-SUFFIX,000webhost.com
+DOMAIN-SUFFIX,072project.com
 DOMAIN-SUFFIX,030buy.com
 DOMAIN-SUFFIX,0rz.tw
 DOMAIN-SUFFIX,1-apple.com.tw
@@ -697,6 +698,7 @@ DOMAIN-SUFFIX,buddhanet.com.tw
 DOMAIN-SUFFIX,buffered.com
 DOMAIN-SUFFIX,bugutv.net
 DOMAIN-SUFFIX,bugutv.org
+DOMAIN-SUFFIX,bugutv.vip
 DOMAIN-SUFFIX,bullguard.com
 DOMAIN-SUFFIX,bullog.org
 DOMAIN-SUFFIX,bullogger.com
@@ -971,6 +973,7 @@ DOMAIN-SUFFIX,clarionproject.org
 DOMAIN-SUFFIX,classicalguitarblog.net
 DOMAIN-SUFFIX,claude.ai
 DOMAIN-SUFFIX,clb.org.hk
+DOMAIN-SUFFIX,cleanshot.cloud
 DOMAIN-SUFFIX,cleansite.biz
 DOMAIN-SUFFIX,cleansite.info
 DOMAIN-SUFFIX,cleansite.us
@@ -1319,6 +1322,7 @@ DOMAIN-SUFFIX,drtuber.com
 DOMAIN-SUFFIX,dscn.info
 DOMAIN-SUFFIX,dsmtp.com
 DOMAIN-SUFFIX,dstk.dk
+DOMAIN-SUFFIX,dssott.com
 DOMAIN-SUFFIX,dtdns.net
 DOMAIN-SUFFIX,dtiblog.com
 DOMAIN-SUFFIX,dtic.mil
@@ -1667,6 +1671,7 @@ DOMAIN-SUFFIX,firstfivefollowers.com
 DOMAIN-SUFFIX,firstpost.com
 DOMAIN-SUFFIX,firstrade.com
 DOMAIN-SUFFIX,fizzik.com
+DOMAIN-SUFFIX,flaiapp.com
 DOMAIN-SUFFIX,flagsonline.it
 DOMAIN-SUFFIX,flecheinthepeche.fr
 DOMAIN-SUFFIX,fleshbot.com
@@ -1684,6 +1689,7 @@ DOMAIN-SUFFIX,flnet.org
 DOMAIN-SUFFIX,flog.tw
 DOMAIN-SUFFIX,flurry.com
 DOMAIN-SUFFIX,flyvpn.com
+DOMAIN-SUFFIX,flyintpro.com
 DOMAIN-SUFFIX,flyzy2005.com
 DOMAIN-SUFFIX,fmnnow.com
 DOMAIN-SUFFIX,fnac.be
@@ -1918,6 +1924,7 @@ DOMAIN-SUFFIX,gfw.press
 DOMAIN-SUFFIX,gfw.report
 DOMAIN-SUFFIX,ggpht.com
 DOMAIN-SUFFIX,ggssl.com
+DOMAIN-SUFFIX,ghproxy.com
 DOMAIN-SUFFIX,ghidra-sre.org
 DOMAIN-SUFFIX,ghostpath.com
 DOMAIN-SUFFIX,ghut.org
@@ -4134,6 +4141,7 @@ DOMAIN-SUFFIX,seevpn.com
 DOMAIN-SUFFIX,seezone.net
 DOMAIN-SUFFIX,sejie.com
 DOMAIN-SUFFIX,sellclassics.com
+DOMAIN-SUFFIX,sendbird.com
 DOMAIN-SUFFIX,sendsmtp.com
 DOMAIN-SUFFIX,sendspace.com
 DOMAIN-SUFFIX,sensortower.com
@@ -4801,6 +4809,7 @@ DOMAIN-SUFFIX,tnaflix.com
 DOMAIN-SUFFIX,tngrnow.com
 DOMAIN-SUFFIX,tngrnow.net
 DOMAIN-SUFFIX,tnp.org
+DOMAIN-SUFFIX,todoist.com
 DOMAIN-SUFFIX,to-porno.com
 DOMAIN-SUFFIX,togetter.com
 DOMAIN-SUFFIX,toh.info
