--- a/BaseRule/special.conf
+++ b/BaseRule/special.conf
@@ -1,2 +1,6 @@
+# gmail smtp
 DOMAIN-SUFFIX,smtp.gmail.com
+# starbucks global
 DOMAIN-SUFFIX,coffee-concepts.com
+# ultra mobile
+# DOMAIN-SUFFIX,eas3.msg.t-mobile.com
