Add devtunnels.ms and trycloudflare.com to ProxyList
Include devtunnels.ms and trycloudflare.com to improve domain coverage in ProxyList.conf. These additions support enhanced proxy routing for related services.

将 devtunnels.ms 和 trycloudflare.com 添加到 ProxyList

在 ProxyList.conf 中包含 devtunnels.ms 和 trycloudflare.com 以改进域覆盖范围。这些新增内容支持相关服务的增强代理路由。

--- a/BaseRule/ProxyList.conf
+++ b/BaseRule/ProxyList.conf
@@ -1219,6 +1219,7 @@ DOMAIN-SUFFIX,desipro.de
 DOMAIN-SUFFIX,dessci.com
 DOMAIN-SUFFIX,destroy-china.jp
 DOMAIN-SUFFIX,deutsche-welle.de
+DOMAIN-SUFFIX,devtunnels.ms
 DOMAIN-SUFFIX,deviantart.com
 DOMAIN-SUFFIX,deviantart.net
 DOMAIN-SUFFIX,devio.us
@@ -4875,6 +4876,7 @@ DOMAIN-SUFFIX,truthontour.org
 DOMAIN-SUFFIX,truthsocial.com
 DOMAIN-SUFFIX,truveo.com
 DOMAIN-SUFFIX,tryheart.jp
+DOMAIN-SUFFIX,trycloudflare.com
 DOMAIN-SUFFIX,tsctv.net
 DOMAIN-SUFFIX,tsemtulku.com
 DOMAIN-SUFFIX,tsquare.tv
