--- a/Video/YouTube.conf
+++ b/Video/YouTube.conf
@@ -188,3 +188,75 @@ DOMAIN-KEYWORD,youtube
 IP-CIDR,172.110.32.0/21,no-resolve
 IP-CIDR,216.73.80.0/20,no-resolve
 IP-CIDR6,2620:120:e000::/40,no-resolve
+
+# 统一风格扩展的 YouTube 匹配规则
+IP-CIDR,199.59.150.49/32,no-resolve
+IP-CIDR,108.160.170.26/32,no-resolve
+IP-CIDR,104.244.46.208/32,no-resolve
+IP-CIDR,128.242.240.93/32,no-resolve
+IP-CIDR,162.125.80.6/32,no-resolve
+IP-CIDR,108.160.163.102/32,no-resolve
+IP-CIDR,116.89.243.8/32,no-resolve
+IP-CIDR,88.191.249.183/32,no-resolve
+IP-CIDR,199.59.148.7/32,no-resolve
+IP-CIDR,173.252.248.244/32,no-resolve
+IP-CIDR,111.243.214.169/32,no-resolve
+IP-CIDR,104.244.46.186/32,no-resolve
+IP-CIDR,173.244.217.42/32,no-resolve
+IP-CIDR,74.86.151.167/32,no-resolve
+IP-CIDR,104.244.46.52/32,no-resolve
+IP-CIDR,108.160.165.147/32,no-resolve
+IP-CIDR,108.160.167.148/32,no-resolve
+IP-CIDR,52.175.9.80/32,no-resolve
+IP-CIDR,220.181.174.38/32,no-resolve
+IP-CIDR,199.16.158.9/32,no-resolve
+IP-CIDR,202.160.128.238/32,no-resolve
+IP-CIDR,98.159.108.57/32,no-resolve
+IP-CIDR,108.160.166.9/32,no-resolve
+IP-CIDR,162.125.7.1/32,no-resolve
+IP-CIDR,108.160.166.9/32,no-resolve
+IP-CIDR,159.138.20.20/32,no-resolve
+IP-CIDR,199.96.63.163/32,no-resolve
+IP-CIDR,199.16.158.8/32,no-resolve
+IP-CIDR,174.37.54.20/32,no-resolve
+IP-CIDR,168.143.171.189/32,no-resolve
+IP-CIDR,199.16.156.38/32,no-resolve
+IP-CIDR,162.125.18.129/32,no-resolve
+IP-CIDR,128.242.240.59/32,no-resolve
+IP-CIDR,104.244.46.246/32,no-resolve
+IP-CIDR,128.242.240.253/32,no-resolve
+IP-CIDR,199.59.148.20/32,no-resolve
+IP-CIDR,168.143.171.154/32,no-resolve
+IP-CIDR,74.86.12.172/32,no-resolve
+IP-CIDR,108.160.167.30/32,no-resolve
+IP-CIDR,103.252.114.101/32,no-resolve
+IP-CIDR,96.44.137.28/32,no-resolve
+IP-CIDR,202.53.137.209/32,no-resolve
+IP-CIDR,108.160.166.62/32,no-resolve
+IP-CIDR,192.133.77.145/32,no-resolve
+IP-CIDR,199.59.150.44/32,no-resolve
+IP-CIDR,199.16.156.75/32,no-resolve
+IP-CIDR,199.16.158.12/32,no-resolve
+IP-CIDR,108.160.162.98/32,no-resolve
+IP-CIDR,173.208.182.68/32,no-resolve
+IP-CIDR,192.133.77.133/32,no-resolve
+IP-CIDR,114.43.24.59/32,no-resolve
+IP-CIDR,202.160.129.36/32,no-resolve
+IP-CIDR,64.13.192.74/32,no-resolve
+IP-CIDR,150.107.3.176/32,no-resolve
+IP-CIDR,128.121.243.228/32,no-resolve
+IP-CIDR,162.125.32.10/32,no-resolve
+IP-CIDR,162.125.2.3/32,no-resolve
+IP-CIDR,108.160.165.173/32,no-resolve
+IP-CIDR,199.59.149.201/32,no-resolve
+IP-CIDR,108.160.170.44/32,no-resolve
+
+# 对应 ASN 匹配补充
+IP-ASN,15133,no-resolve
+IP-ASN,174,no-resolve
+IP-ASN,15169,no-resolve
+IP-ASN,36561,no-resolve
+IP-ASN,13335,no-resolve
+IP-ASN,20057,no-resolve
+IP-ASN,16625,no-resolve
+IP-ASN,20940,no-resolve
