Add Synology and Cambridge domains to configuration lists
Synology domains were added to DirectList for IP checks and DDNS support. Cambridge.org was added to ProxyList for domain-specific proxy routing. These updates ensure proper handling of these domains in their respective configurations.

将 Synology 和 Cambridge 域名添加到配置列表中
Synology 域名已添加到 DirectList 以进行 IP 检查和 DDNS 支持。Cambridge.org 已添加到 ProxyList 以进行特定域名的代理路由。这些更新确保在各自的配置中正确处理这些域名。

--- a/BaseRule/ProxyList.conf
+++ b/BaseRule/ProxyList.conf
@@ -757,6 +757,7 @@ DOMAIN-SUFFIX,camfrog.com
 DOMAIN-SUFFIX,campaignforuyghurs.org
 DOMAIN-SUFFIX,cams.com
 DOMAIN-SUFFIX,cams.org.sg
+DOMAIN-SUFFIX,cambridge.org
 DOMAIN-SUFFIX,canadameet.com
 DOMAIN-SUFFIX,canalporno.com
 DOMAIN-SUFFIX,cantonese.asia
