--- a/BaseRule/DirectList.conf
+++ b/BaseRule/DirectList.conf
@@ -12,8 +12,14 @@ DOMAIN-SUFFIX,zafinsvc.com
 DOMAIN-SUFFIX,zajourney.com
 DOMAIN-SUFFIX,za.group
 
+#Synology chek ip
+DOMAIN,checkip.synology.com
+DOMAIN,checkipv6.synology.com
+DOMAIN,ddns.synology.com
+
 # BOC HK
 DOMAIN-SUFFIX,bochk.com
+DOMAIN-SUFFIX,etnet.com.hk
 
 #DuoLinGo
 DOMAIN-SUFFIX,duolingo.com
