Add new domains to ProxyList.conf
Expanded the list with several new DOMAIN-SUFFIX entries, including aiposthub.com, buildwithfern.com, and synology.com, among others. This update ensures improved support for additional domains within the proxy configuration.
将新域名添加到 ProxyList.conf

扩展列表，包含几个新的 DOMAIN-SUFFIX 条目，包括 aiposthub.com、buildwithfern.com 和 synology.com 等。此更新确保在代理配置中对其他域名的更好支持。

--- a/BaseRule/ProxyList.conf
+++ b/BaseRule/ProxyList.conf
@@ -216,6 +216,7 @@ DOMAIN-SUFFIX,agrd.io
 DOMAIN-SUFFIX,ai-kan.net
 DOMAIN-SUFFIX,ai-wen.net
 DOMAIN-SUFFIX,aiph.net
+DOMAIN-SUFFIX,aiposthub.com
 DOMAIN-SUFFIX,airasia.com
 DOMAIN-SUFFIX,airconsole.com
 DOMAIN-SUFFIX,aircrack-ng.org
@@ -693,6 +694,7 @@ DOMAIN-SUFFIX,btku.me
 DOMAIN-SUFFIX,btku.org
 DOMAIN-SUFFIX,btspread.com
 DOMAIN-SUFFIX,btsynckeys.com
+DOMAIN-SUFFIX,buildwithfern.com
 DOMAIN-SUFFIX,budaedu.org
 DOMAIN-SUFFIX,buddhanet.com.tw
 DOMAIN-SUFFIX,buffered.com
@@ -1051,9 +1053,11 @@ DOMAIN-SUFFIX,compress.to
 DOMAIN-SUFFIX,compython.net
 DOMAIN-SUFFIX,coffee-concepts.com
 DOMAIN-SUFFIX,quickconnect.to
+DOMAIN-SUFFIX,quickconnect.cn
 DOMAIN-SUFFIX,conoha.jp
 DOMAIN-SUFFIX,constitutionalism.solutions
 DOMAIN-SUFFIX,contactmagazine.net
+DOMAIN-SUFFIX,content-loader.com
 DOMAIN-SUFFIX,convio.net
 DOMAIN-SUFFIX,coobay.com
 DOMAIN-SUFFIX,cool18.com
@@ -1629,6 +1633,7 @@ DOMAIN-SUFFIX,fdc64.org
 DOMAIN-SUFFIX,fdc89.jp
 DOMAIN-SUFFIX,feedburner.com
 DOMAIN-SUFFIX,feeder.co
+DOMAIN-SUFFIX,ferndocs.com
 DOMAIN-SUFFIX,feedly.com
 DOMAIN-SUFFIX,feedx.net
 DOMAIN-SUFFIX,feelssh.com
@@ -2941,6 +2946,7 @@ DOMAIN-SUFFIX,maildns.xyz
 DOMAIN-SUFFIX,maiplus.com
 DOMAIN-SUFFIX,maizhong.org
 DOMAIN-SUFFIX,makemymood.com
+DOMAIN-SUFFIX,maketheweb.io
 DOMAIN-SUFFIX,makkahnewspaper.com
 DOMAIN-SUFFIX,malaysiakini.com
 DOMAIN-SUFFIX,mamingzhe.com
@@ -2967,6 +2973,7 @@ DOMAIN-SUFFIX,marxist.net
 DOMAIN-SUFFIX,marxists.org
 DOMAIN-SUFFIX,mash.to
 DOMAIN-SUFFIX,maskedip.com
+DOMAIN-SUFFIX,mastercard.com
 DOMAIN-SUFFIX,mastodon.cloud
 DOMAIN-SUFFIX,mastodon.host
 DOMAIN-SUFFIX,mastodon.social
@@ -4500,6 +4507,8 @@ DOMAIN-SUFFIX,swissinfo.ch
 DOMAIN-SUFFIX,swissvpn.net
 DOMAIN-SUFFIX,switch1.jp
 DOMAIN-SUFFIX,switchvpn.net
+DOMAIN-SUFFIX,synology.me
+DOMAIN-SUFFIX,synology.com
 DOMAIN-SUFFIX,sydneytoday.com
 DOMAIN-SUFFIX,sylfoundation.org
 DOMAIN-SUFFIX,syncback.com
