--- a/Jetbrains-Download.conf
+++ b/Jetbrains-Download.conf
@@ -2,3 +2,4 @@ DOMAIN,plugins.jetbrains.com
 DOMAIN,downloads.marketplace.jetbrains.com
 DOMAIN-SUFFIX,download-cdn.jetbrains.com.cn
 DOMAIN,download.jetbrains.com
+DOMAIN,resources.jetbrains.com
