Update domain lists to enhance coverage and add new entries
Added new domains `ollama.ai`, `ddns.ilucius.com`, and others to `BaseDirectList.conf`. Updated `BaseProxyList.conf` with `css-loaders.com` and `Chat/QQ.conf` with a new IP range. These changes expand domain coverage and improve configuration accuracy.

更新域名列表以提升覆盖范围并添加新条目

在 `BaseDirectList.conf` 中添加了新域名 `ollama.ai`、`ddns.ilucius.com` 等。在 `BaseProxyList.conf` 中添加了 `css-loaders.com`，并在 `Chat/QQ.conf` 中添加了新的 IP 范围。这些变更扩展了域名覆盖范围并提高了配置准确性。

--- a/BaseRule/BaseDirectList.conf
+++ b/BaseRule/BaseDirectList.conf
@@ -30,13 +30,15 @@ DOMAIN-SUFFIX,caixin.cn
 DOMAIN-SUFFIX,caixin.com
 
 DOMAIN-SUFFIX,zhihu.com
-DOMAIN-SUFFIX,immersivetranslate.com
 DOMAIN-SUFFIX,imappro.zoho.com
 DOMAIN-SUFFIX,ant.design
 DOMAIN-SUFFIX,opencat.app
-DOMAIN-SUFFIX,updf.com
 DOMAIN-SUFFIX,zhihu.com
 DOMAIN-SUFFIX,meituan.net
+DOMAIN-SUFFIX,ollama.ai
+
+DOMAIN,gs2.ww.prod.dl.playstation.net
+DOMAIN,ddns.ilucius.com
 
 IP-CIDR,173.231.16.77/32
 IP-CIDR,5.9.243.187/32
