--- a/BaseRule/BaseProxyList.conf
+++ b/BaseRule/BaseProxyList.conf
@@ -1101,6 +1101,7 @@ DOMAIN-SUFFIX,csis.org
 DOMAIN-SUFFIX,csmonitor.com
 DOMAIN-SUFFIX,csuchen.de
 DOMAIN-SUFFIX,csw.org.uk
+DOMAIN-SUFFIX,css-loaders.com
 DOMAIN-SUFFIX,ct.org.tw
 DOMAIN-SUFFIX,ctao.org
 DOMAIN-SUFFIX,ctfriend.net
