--- a/Chat/QQ.conf
+++ b/Chat/QQ.conf
@@ -7,6 +7,7 @@ IP-CIDR,104.71.48.254/32,DIRECT
 IP-CIDR,113.105.153.143/32,DIRECT
 IP-CIDR,125.88.187.96/32,DIRECT
 IP-CIDR,129.226.102.247/32,DIRECT
+IP-CIDR,157.148.54.16/32,DIRECT
 IP-CIDR,183.60.230.202/32,DIRECT
 DOMAIN-SUFFIX,qq.com,DIRECT
 DOMAIN-SUFFIX,tencent.com,DIRECT
