Add sentry.io to OpenAI.conf
Expanded domain list with `sentry.io` to improve configuration coverage for OpenAI-related services.

--- a/OpenAI.conf
+++ b/OpenAI.conf
@@ -20,4 +20,5 @@ DOMAIN-SUFFIX,openaicom.imgix.net
 DOMAIN-SUFFIX,openaicomproductionae4b.blob.core.windows.net
 DOMAIN-SUFFIX,production-openaicom-storage.azureedge.net
 DOMAIN-SUFFIX,poe.com
+DOMAIN-SUFFIX,sentry.io
 DOMAIN-KEYWORD,openai
