--- a/Chat/WeChat.conf
+++ b/Chat/WeChat.conf
@@ -4,11 +4,13 @@ DOMAIN-SUFFIX,wechat.com
 DOMAIN-SUFFIX,wechatlegal.net
 DOMAIN-SUFFIX,wechatpay.com
 DOMAIN-SUFFIX,wxapp.tc.qq.com
+DOMAIN-SUFFIX,qpic.cn
 DOMAIN,wx.logo.cn
 DOMAIN,wx.qlogo.cn
 DOMAIN,wework.qpic.cn
 DOMAIN,mmbiz.qpic.cn
 DOMAIN,dldir1v6.qq.com
+
 IP-CIDR,101.32.133.53/32
 IP-CIDR,43.156.222.154/32
 IP-CIDR,43.156.222.210/32
@@ -37,6 +39,7 @@ IP-CIDR,101.33.110.204/32
 IP-CIDR,101.33.110.28/32
 IP-CIDR,106.39.206.21/32
 IP-CIDR,106.39.206.25/32
+IP-CIDR,113.105.171.17/32
 IP-CIDR,113.240.75.193/32
 IP-CIDR,113.240.76.147/32
 IP-CIDR,113.240.76.154/32
@@ -47,16 +50,17 @@ IP-CIDR,123.151.48.193/32
 IP-CIDR,123.151.48.208/32
 IP-CIDR,124.225.189.82/32
 IP-CIDR,124.225.191.16/32
+IP-CIDR,125.77.149.33/32
+IP-CIDR,125.88.199.123/32
 IP-CIDR,129.226.107.29/32
 IP-CIDR,129.226.3.47/32
 IP-CIDR,129.226.107.29/32
+IP-CIDR,175.6.93.26/32
 IP-CIDR,180.101.242.212/32
 IP-CIDR,180.101.242.227/32
+IP-CIDR,183.47.118.145/32
+IP-CIDR,183.47.121.33/32
 IP-CIDR,183.60.159.57/32
 IP-CIDR,183.60.159.124/32
 IP-CIDR,183.60.159.183/32
 IP-CIDR,183.61.254.83/32
-
-
-
-
