Expand configuration with new domain entries across lists
Added `lucius.ltd` to `BaseDirectList.conf`, `ilucius.com` and `updf.com` to `BaseProxyList.conf`, `newyorktimesinfo.com` to `US.conf`, and `hk01.com` to `HK.conf`. These updates enhance domain coverage and improve configuration accuracy.

--- a/BaseRule/BaseDirectList.conf
+++ b/BaseRule/BaseDirectList.conf
@@ -182,6 +182,7 @@ DOMAIN-SUFFIX,b.e.f.ip6.arpa
 DOMAIN-SUFFIX,d.f.ip6.arpa
 DOMAIN-SUFFIX,hiwifi.com
 DOMAIN-SUFFIX,home.arpa
+DOMAIN-SUFFIX,lucius.ltd
 DOMAIN-SUFFIX,leike.cc
 DOMAIN-SUFFIX,localhost.ptlogin2.qq.com
 DOMAIN-SUFFIX,localhost.sec.qq.com
