--- a/BaseRule/BaseProxyList.conf
+++ b/BaseRule/BaseProxyList.conf
@@ -2419,6 +2419,7 @@ DOMAIN-SUFFIX,iicns.com
 DOMAIN-SUFFIX,ikstar.com
 DOMAIN-SUFFIX,ikwb.com
 DOMAIN-SUFFIX,ilbe.com
+DOMAIN-SUFFIX,ilucius.com
 DOMAIN-SUFFIX,ilhamtohtiinstitute.org
 DOMAIN-SUFFIX,illusionfactory.com
 DOMAIN-SUFFIX,ilove80.be
@@ -5099,6 +5100,7 @@ DOMAIN-SUFFIX,unseen.is
 DOMAIN-SUFFIX,unstable.icu
 DOMAIN-SUFFIX,untraceable.us
 DOMAIN-SUFFIX,uocn.org
+DOMAIN-SUFFIX,updf.com
 DOMAIN-SUFFIX,updatestar.com
 DOMAIN-SUFFIX,upghsbc.com
 DOMAIN-SUFFIX,upholdjustice.org
