Expand BaseRule, Chat/QQ, and Video/BiliBili configurations with new domains and IP ranges
Added multiple `DOMAIN-SUFFIX` entries, such as `amplitude.com`, `metamask.io`, and `cloudfront.net`. Updated `IP-CIDR` entries across `BaseDirectList.conf`, `BaseProxyList.conf`, `Chat/QQ.conf`, and `Video/BiliBili.conf` to enhance coverage and improve configuration accuracy.

--- a/BaseRule/BaseProxyList.conf
+++ b/BaseRule/BaseProxyList.conf
@@ -290,6 +290,7 @@ DOMAIN-SUFFIX,amnesty.tw
 DOMAIN-SUFFIX,amnestyusa.org
 DOMAIN-SUFFIX,amnyemachen.org
 DOMAIN-SUFFIX,amoiist.com
+DOMAIN-SUFFIX,amplitude.com
 DOMAIN-SUFFIX,ampproject.org
 DOMAIN-SUFFIX,amtb-taipei.org
 DOMAIN-SUFFIX,anchor.fm
@@ -359,6 +360,7 @@ DOMAIN-SUFFIX,appdownloader.net
 DOMAIN-SUFFIX,appledaily.com
 DOMAIN-SUFFIX,appledaily.com.hk
 DOMAIN-SUFFIX,appledaily.com.tw
+DOMAIN-SUFFIX,appsflyersdk.com
 DOMAIN-SUFFIX,appshopper.com
 DOMAIN-SUFFIX,appsocks.net
 DOMAIN-SUFFIX,appspot.com
@@ -987,6 +989,7 @@ DOMAIN-SUFFIX,clementine-player.org
 DOMAIN-SUFFIX,clinica-tibet.ru
 DOMAIN-SUFFIX,clipfish.de
 DOMAIN-SUFFIX,cloakpoint.com
+DOMAIN-SUFFIX,cloudfront.net
 DOMAIN-SUFFIX,cloudcone.com
 DOMAIN-SUFFIX,cloudflare-ipfs.com
 DOMAIN-SUFFIX,cloudfunctions.net
@@ -1716,6 +1719,7 @@ DOMAIN-SUFFIX,forum4hk.com
 DOMAIN-SUFFIX,forums-free.com
 DOMAIN-SUFFIX,fotile.me
 DOMAIN-SUFFIX,fourthinternational.org
+DOMAIN-SUFFIX,foxcard.io
 DOMAIN-SUFFIX,foxbusiness.com
 DOMAIN-SUFFIX,foxdie.us
 DOMAIN-SUFFIX,foxgay.com
@@ -3037,6 +3041,7 @@ DOMAIN-SUFFIX,meshrep.com
 DOMAIN-SUFFIX,mesotw.com
 DOMAIN-SUFFIX,messenger.com
 DOMAIN-SUFFIX,meta.com
+DOMAIN-SUFFIX,metamask.io
 DOMAIN-SUFFIX,metacafe.com
 DOMAIN-SUFFIX,metafilter.com
 DOMAIN-SUFFIX,metart.com
@@ -3537,6 +3542,7 @@ DOMAIN-SUFFIX,on2.com
 DOMAIN-SUFFIX,onapp.com
 DOMAIN-SUFFIX,onedumb.com
 DOMAIN-SUFFIX,onejav.com
+DOMAIN-SUFFIX,onesignal.com
 DOMAIN-SUFFIX,onion.city
 DOMAIN-SUFFIX,onion.ly
 DOMAIN-SUFFIX,onlinecha.com
@@ -4070,6 +4076,7 @@ DOMAIN-SUFFIX,rule34.xxx
 DOMAIN-SUFFIX,rumble.com
 DOMAIN-SUFFIX,runbtx.com
 DOMAIN-SUFFIX,rushbee.com
+DOMAIN-SUFFIX,rustacean.net
 DOMAIN-SUFFIX,rusvpn.com
 DOMAIN-SUFFIX,ruten.com.tw
 DOMAIN-SUFFIX,rutracker.net
@@ -4382,6 +4389,7 @@ DOMAIN-SUFFIX,sowers.org.hk
 DOMAIN-SUFFIX,sowiki.net
 DOMAIN-SUFFIX,soylent.com
 DOMAIN-SUFFIX,soylentnews.org
+DOMAIN-SUFFIX,sparkmailapp.com
 DOMAIN-SUFFIX,spankbang.com
 DOMAIN-SUFFIX,spankingtube.com
 DOMAIN-SUFFIX,spankwire.com
@@ -5804,3 +5812,7 @@ DOMAIN-SUFFIX,stackoverflow.com
 
 #Homebrew
 DOMAIN-SUFFIX,brew.sh
+
+IP-CIDR,18.206.50.220/32
+IP-CIDR,130.211.33.145/32
+IP-CIDR,168.143.162.58/32
