--- a/Video/BiliBili.conf
+++ b/Video/BiliBili.conf
@@ -2,7 +2,10 @@ DOMAIN-SUFFIX,bilibili.com
 DOMAIN-SUFFIX,biliapi.com
 DOMAIN-SUFFIX,biliapi.net
 DOMAIN-SUFFIX,bilivideo.com
+
 IP-CIDR,103.151.151.4/32,no-resolve
 IP-CIDR,103.151.151.133/32,no-resolve
 IP-CIDR,103.151.151.134/32,no-resolve
+IP-CIDR,112.83.140.14/32,no-resolve
+
 URL-REGEX,(^http:\/\/101\.91\.140\.124\/resolve\?host=upos-sz-mirror08c\.bilivideo\.com&sign=0d9486&query=4,6$)
