--- a/BaseRule/BaseDirectList.conf
+++ b/BaseRule/BaseDirectList.conf
@@ -9364,6 +9364,7 @@ IP-CIDR,129.28.0.0/16,no-resolve
 IP-CIDR,13.104.184.80/28,no-resolve
 IP-CIDR,13.107.184.8/30,no-resolve
 IP-CIDR,13.248.48.0/20,no-resolve
+IP-CIDR,13.248.139.174/32,no-resolve
 IP-CIDR,13.34.11.0/26,no-resolve
 IP-CIDR,13.34.16.64/26,no-resolve
 IP-CIDR,13.34.62.0/26,no-resolve
