--- a/Chat/QQ.conf
+++ b/Chat/QQ.conf
@@ -1,13 +1,17 @@
-IP-CIDR,43.154.254.32/32,DIRECT
-IP-CIDR,43.154.254.144/32,DIRECT
-IP-CIDR,43.135.106.179/32,DIRECT
-IP-CIDR,23.222.244.252/32,DIRECT
-IP-CIDR,43.154.240.13/32,DIRECT
-IP-CIDR,104.71.48.254/32,DIRECT
-IP-CIDR,113.105.153.143/32,DIRECT
-IP-CIDR,125.88.187.96/32,DIRECT
-IP-CIDR,129.226.102.247/32,DIRECT
-IP-CIDR,157.148.54.16/32,DIRECT
-IP-CIDR,183.60.230.202/32,DIRECT
-DOMAIN-SUFFIX,qq.com,DIRECT
-DOMAIN-SUFFIX,tencent.com,DIRECT
+IP-CIDR,43.154.254.32/32
+IP-CIDR,43.154.254.144/32
+IP-CIDR,43.135.106.179/32
+IP-CIDR,23.222.244.252/32
+IP-CIDR,43.154.240.13/32
+IP-CIDR,104.71.48.254/32
+IP-CIDR,113.105.153.143/32
+IP-CIDR,113.105.153.174/32
+IP-CIDR,125.88.187.96/32
+IP-CIDR,129.226.102.247/32
+IP-CIDR,157.148.54.16/32
+IP-CIDR,183.60.230.202/32
+IP-CIDR,183.60.230.195/32
+
+DOMAIN-SUFFIX,qq.com
+DOMAIN-SUFFIX,tencent.com
+DOMAIN-SUFFIX,gtimg.cn
