Expand BaseProxyList and HBOMAX configurations with new domains
Added multiple `DOMAIN-SUFFIX` entries, such as `bootstrapcdn.com`, `crisp.chat`, `goswiftui.com`, `z-library.sk`, and `hbomax.com`, to enhance coverage and improve configuration accuracy across BaseProxyList and HBOMAX.

--- a/BaseRule/BaseProxyList.conf
+++ b/BaseRule/BaseProxyList.conf
@@ -24,6 +24,7 @@ DOMAIN-KEYWORD,twitter
 DOMAIN-KEYWORD,whatsapp
 
 # GFW list
+DOMAIN,634.tv
 DOMAIN-SUFFIX,gfwlist.start
 DOMAIN-SUFFIX,000webhost.com
 DOMAIN-SUFFIX,072project.com
@@ -144,6 +145,7 @@ DOMAIN-SUFFIX,888poker.com
 DOMAIN-SUFFIX,89-64.org
 DOMAIN-SUFFIX,8964museum.com
 DOMAIN-SUFFIX,8news.com.tw
+DOMAIN-SUFFIX,8world.com
 DOMAIN-SUFFIX,8z1.net
 DOMAIN-SUFFIX,9001700.com
 DOMAIN-SUFFIX,908taiwan.org
@@ -638,6 +640,7 @@ DOMAIN-SUFFIX,bonbonsex.com
 DOMAIN-SUFFIX,bonfoundation.org
 DOMAIN-SUFFIX,bongacams.com
 DOMAIN-SUFFIX,boobstagram.com
+DOMAIN-SUFFIX,bootstrapcdn.com
 DOMAIN-SUFFIX,book.com.tw
 DOMAIN-SUFFIX,bookdepository.com
 DOMAIN-SUFFIX,bookepub.com
@@ -1089,6 +1092,7 @@ DOMAIN-SUFFIX,creaders.net
 DOMAIN-SUFFIX,creadersnet.com
 DOMAIN-SUFFIX,creativelab5.com
 DOMAIN-SUFFIX,creamdata.net
+DOMAIN-SUFFIX,crisp.chat
 DOMAIN-SUFFIX,cristyli.com
 DOMAIN-SUFFIX,crocotube.com
 DOMAIN-SUFFIX,crossfire.co.kr
@@ -1132,12 +1136,8 @@ DOMAIN-SUFFIX,cz.cc
 DOMAIN-SUFFIX,d-fukyu.com
 DOMAIN-SUFFIX,d0z.net
 DOMAIN-SUFFIX,d100.net
-DOMAIN-SUFFIX,d1b183sg0nvnuh.cloudfront.net
-DOMAIN-SUFFIX,d1c37gjwa26taa.cloudfront.net
 DOMAIN-SUFFIX,d2bay.com
 DOMAIN-SUFFIX,d2pass.com
-DOMAIN-SUFFIX,d3c33hcgiwev3.cloudfront.net
-DOMAIN-SUFFIX,d3rhr7kgmtrq1v.cloudfront.net
 DOMAIN-SUFFIX,dabr.co.uk
 DOMAIN-SUFFIX,dabr.eu
 DOMAIN-SUFFIX,dabr.me
@@ -1439,6 +1439,7 @@ DOMAIN-SUFFIX,elpais.com
 DOMAIN-SUFFIX,eltondisney.com
 DOMAIN-SUFFIX,emaga.com
 DOMAIN-SUFFIX,emanna.com
+DOMAIN-SUFFIX,emailimagecdnadz7.com
 DOMAIN-SUFFIX,emilylau.org.hk
 DOMAIN-SUFFIX,emory.edu
 DOMAIN-SUFFIX,empfil.com
@@ -2021,6 +2022,7 @@ DOMAIN-SUFFIX,gopetition.com
 DOMAIN-SUFFIX,goproxing.net
 DOMAIN-SUFFIX,goreforum.com
 DOMAIN-SUFFIX,goregrish.com
+DOMAIN-SUFFIX,goswiftui.com
 DOMAIN-SUFFIX,gospelherald.com
 DOMAIN-SUFFIX,got-game.org
 DOMAIN-SUFFIX,gotdns.ch
@@ -2057,6 +2059,7 @@ DOMAIN-SUFFIX,greenvpn.net
 DOMAIN-SUFFIX,greenvpn.org
 DOMAIN-SUFFIX,grindr.com
 DOMAIN-SUFFIX,grizzlysms.com
+DOMAIN-SUFFIX,grok.com
 DOMAIN-SUFFIX,grotty-monday.com
 DOMAIN-SUFFIX,gs-discuss.com
 DOMAIN-SUFFIX,gsearch.media
@@ -2079,6 +2082,7 @@ DOMAIN-SUFFIX,gun-world.net
 DOMAIN-SUFFIX,gunsamerica.com
 DOMAIN-SUFFIX,gunsandammo.com
 DOMAIN-SUFFIX,guo.media
+DOMAIN-SUFFIX,guozeyu.com
 DOMAIN-SUFFIX,guruonline.hk
 DOMAIN-SUFFIX,gutteruncensored.com
 DOMAIN-SUFFIX,gvlib.com
@@ -2391,6 +2395,7 @@ DOMAIN-SUFFIX,icl-fi.org
 DOMAIN-SUFFIX,icoco.com
 DOMAIN-SUFFIX,iconfactory.net
 DOMAIN-SUFFIX,iconpaper.org
+DOMAIN-SUFFIX,icode504.com
 DOMAIN-SUFFIX,icu-project.org
 DOMAIN-SUFFIX,idaiwan.com
 DOMAIN-SUFFIX,idemocracy.asia
@@ -2848,6 +2853,7 @@ DOMAIN-SUFFIX,limiao.net
 DOMAIN-SUFFIX,line-apps.com
 DOMAIN-SUFFIX,line-scdn.net
 DOMAIN-SUFFIX,line.me
+DOMAIN-SUFFIX,lingotrack.com
 DOMAIN-SUFFIX,linglingfa.com
 DOMAIN-SUFFIX,lingvodics.com
 DOMAIN-SUFFIX,link-o-rama.com
@@ -3302,6 +3308,7 @@ DOMAIN-SUFFIX,ncol.com
 DOMAIN-SUFFIX,nde.de
 DOMAIN-SUFFIX,ndi.org
 DOMAIN-SUFFIX,ndr.de
+DOMAIN-SUFFIX,neatdownloadmanager.com
 DOMAIN-SUFFIX,ned.org
 DOMAIN-SUFFIX,nekoslovakia.net
 DOMAIN-SUFFIX,neo-miracle.com
@@ -3401,6 +3408,7 @@ DOMAIN-SUFFIX,nobel.se
 DOMAIN-SUFFIX,nobelprize.org
 DOMAIN-SUFFIX,nobodycanstop.us
 DOMAIN-SUFFIX,nodesnoop.com
+DOMAIN-SUFFIX,nodeseek.com
 DOMAIN-SUFFIX,nofile.io
 DOMAIN-SUFFIX,nokogiri.org
 DOMAIN-SUFFIX,nokola.com
@@ -3967,6 +3975,7 @@ DOMAIN-SUFFIX,rateyourmusic.com
 DOMAIN-SUFFIX,rationalwiki.org
 DOMAIN-SUFFIX,rawgit.com
 DOMAIN-SUFFIX,raxcdn.com
+DOMAIN-SUFFIX,ray.so
 DOMAIN-SUFFIX,raycast.com
 DOMAIN-SUFFIX,razyboard.com
 DOMAIN-SUFFIX,rcinet.ca
@@ -5701,6 +5710,7 @@ DOMAIN-SUFFIX,yyjlymb.xyz
 DOMAIN-SUFFIX,yysub.net
 DOMAIN-SUFFIX,yzzk.com
 DOMAIN-SUFFIX,z-lib.org
+DOMAIN-SUFFIX,z-library.sk
 DOMAIN-SUFFIX,zacebook.com
 DOMAIN-SUFFIX,zalmos.com
 DOMAIN-SUFFIX,zamimg.com
