--- a/Video/HBOMAX.conf
+++ b/Video/HBOMAX.conf
@@ -2,4 +2,6 @@ DOMAIN-SUFFIX,max.com
 DOMAIN-SUFFIX,msecnd.net
 DOMAIN-SUFFIX,discomax.com
 DOMAIN-SUFFIX,litix.io
+DOMAIN-SUFFIX,hbomax.com
+
 IP-CIDR,13.248.139.174/32,no-resolve
