--- a/synology/synology-proxy.conf
+++ b/synology/synology-proxy.conf
@@ -1,5 +1,7 @@
 DOMAIN-SUFFIX,synology.me
 DOMAIN-SUFFIX,synology.com
 
+IP-CIDR,44.238.55.97/32
+IP-CIDR,54.222.137.68/32
 IP-CIDR,84.200.39.220/32
 IP-CIDR,159.100.4.215/32
