Reorganize QuickConnect configuration and add new Synology IP ranges
Moved `quickconnect.to` and `quickconnect.cn` from `BaseProxyList.conf` to `synology-proxy.conf` and added `IP-CIDR` entries `54.222.246.53/32` and `100.20.120.118/32` to enhance Synology coverage and accuracy.

重新组织 QuickConnect 配置并添加新的 Synology IP 范围

将 `quickconnect.to` 和 `quickconnect.cn` 从 `BaseProxyList.conf` 移至 `synology-proxy.conf`，并添加 `IP-CIDR` 条目 `54.222.246.53/32` 和 `100.20.120.118/32`，以增强 Synology 的覆盖范围和准确性。

--- a/synology/synology-proxy.conf
+++ b/synology/synology-proxy.conf
@@ -1,10 +1,14 @@
 DOMAIN-SUFFIX,synology.me
 DOMAIN-SUFFIX,synology.com
+DOMAIN-SUFFIX,quickconnect.to
+DOMAIN-SUFFIX,quickconnect.cn
 
 IP-CIDR,44.238.55.97/32
 IP-CIDR,52.80.85.224/32
 IP-CIDR,54.222.137.68/32
+IP-CIDR,54.222.246.53/32
 IP-CIDR,54.222.235.145/32
 IP-CIDR,54.223.45.133/32
 IP-CIDR,84.200.39.220/32
+IP-CIDR,100.20.120.118/32
 IP-CIDR,159.100.4.215/32
