Expand BaseDirectList with a new domain
Added `DOMAIN` entry for `nas.ilucius.com` to improve coverage and enhance configuration accuracy.

扩展 BaseDirectList 以包含新域名

为 `nas.ilucius.com` 添加了 `DOMAIN` 项，以提高覆盖范围并增强配置准确性。

--- a/BaseRule/BaseDirectList.conf
+++ b/BaseRule/BaseDirectList.conf
@@ -33,6 +33,7 @@ DOMAIN-SUFFIX,meituan.net
 DOMAIN-SUFFIX,ollama.ai
 
 DOMAIN,gs2.ww.prod.dl.playstation.net
+DOMAIN,nas.ilucius.com
 DOMAIN,ddns.ilucius.com
 
 IP-CIDR,173.231.16.77/32
