Expand configurations with new domains and IP ranges
Added multiple `DOMAIN-SUFFIX` entries, such as `971179.xyz`, `backblazeb2.com`, `beyondwickedmapping.org`, `getcleanshot.com`, and `wins.cool`, across various files to improve coverage. Enhanced `WeChat.conf` and `synology-proxy.conf` with new `IP-CIDR` ranges for better accuracy. Expanded `Jetbrains-Download.conf` by adding `DOMAIN` for `downloads.marketplace.jetbrains.com.cn`.

--- a/BaseRule/BaseProxyList.conf
+++ b/BaseRule/BaseProxyList.conf
@@ -152,6 +152,7 @@ DOMAIN-SUFFIX,908taiwan.org
 DOMAIN-SUFFIX,91porn.com
 DOMAIN-SUFFIX,91vps.club
 DOMAIN-SUFFIX,92ccav.com
+DOMAIN-SUFFIX,971179.xyz
 DOMAIN-SUFFIX,991.com
 DOMAIN-SUFFIX,99btgc01.com
 DOMAIN-SUFFIX,99cn.info
@@ -457,6 +458,7 @@ DOMAIN-SUFFIX,b0ne.com
 DOMAIN-SUFFIX,baby-kingdom.com
 DOMAIN-SUFFIX,babylonbee.com
 DOMAIN-SUFFIX,babynet.com.hk
+DOMAIN-SUFFIX,backblazeb2.com
 DOMAIN-SUFFIX,backchina.com
 DOMAIN-SUFFIX,backpackers.com.tw
 DOMAIN-SUFFIX,backtotiananmen.com
@@ -541,6 +543,7 @@ DOMAIN-SUFFIX,bettween.com
 DOMAIN-SUFFIX,betvictor.com
 DOMAIN-SUFFIX,bewww.net
 DOMAIN-SUFFIX,beyondfirewall.com
+DOMAIN-SUFFIX,beyondwickedmapping.org
 DOMAIN-SUFFIX,bfnn.org
 DOMAIN-SUFFIX,bfsh.hk
 DOMAIN-SUFFIX,bgvpn.com
@@ -1911,6 +1914,7 @@ DOMAIN-SUFFIX,get.page
 DOMAIN-SUFFIX,getastrill.com
 DOMAIN-SUFFIX,getchu.com
 DOMAIN-SUFFIX,getcloak.com
+DOMAIN-SUFFIX,getcleanshot.com
 DOMAIN-SUFFIX,getfoxyproxy.org
 DOMAIN-SUFFIX,getfreedur.com
 DOMAIN-SUFFIX,getgom.com
@@ -5439,6 +5443,7 @@ DOMAIN-SUFFIX,wikiwiki.jp
 DOMAIN-SUFFIX,wildammo.com
 DOMAIN-SUFFIX,williamhill.com
 DOMAIN-SUFFIX,willw.net
+DOMAIN-SUFFIX,wins.cool
 DOMAIN-SUFFIX,windowsphoneme.com
 DOMAIN-SUFFIX,windscribe.com
 DOMAIN-SUFFIX,windy.com
