--- a/Chat/WeChat.conf
+++ b/Chat/WeChat.conf
@@ -11,6 +11,7 @@ DOMAIN,wework.qpic.cn
 DOMAIN,mmbiz.qpic.cn
 DOMAIN,dldir1v6.qq.com
 
+IP-CIDR,27.44.121.245/32
 IP-CIDR,43.156.222.154/32
 IP-CIDR,43.156.222.210/32
 IP-CIDR,43.156.222.216/32
@@ -69,6 +70,7 @@ IP-CIDR,125.88.199.123/32
 IP-CIDR,129.226.107.29/32
 IP-CIDR,129.226.3.47/32
 IP-CIDR,129.226.107.29/32
+IP-CIDR,157.148.57.99/32
 IP-CIDR,157.148.61.213/32
 IP-CIDR,175.6.93.26/32
 IP-CIDR,180.101.242.212/32
