--- a/Jetbrains-Download.conf
+++ b/Jetbrains-Download.conf
@@ -1,5 +1,6 @@
 DOMAIN,plugins.jetbrains.com
 DOMAIN,downloads.marketplace.jetbrains.com
+DOMAIN,downloads.marketplace.jetbrains.com.cn
 DOMAIN-SUFFIX,download-cdn.jetbrains.com.cn
 DOMAIN,download.jetbrains.com
 DOMAIN,resources.jetbrains.com
