--- a/synology/synology-proxy.conf
+++ b/synology/synology-proxy.conf
@@ -4,8 +4,10 @@ DOMAIN-SUFFIX,quickconnect.to
 DOMAIN-SUFFIX,quickconnect.cn
 
 IP-CIDR,13.226.69.34/32
+IP-CIDR,35.83.191.102/32
 IP-CIDR,44.238.55.97/32
 IP-CIDR,52.80.85.224/32
+IP-CIDR,52.80.220.85/32
 IP-CIDR,54.222.137.68/32
 IP-CIDR,54.222.246.53/32
 IP-CIDR,54.222.235.145/32
