Expand WeChat and Facebook configurations with new entries
Added `IP-CIDR6` entries for `240e:e1:aa00:101a::48/128` and `240e:e9:6003:218::1c/128` to enhance WeChat coverage. Updated Facebook configuration by adding a duplicate `DOMAIN-SUFFIX,facebook.nl` entry.

--- a/Chat/FaceBook.conf
+++ b/Chat/FaceBook.conf
@@ -13,6 +13,7 @@ DOMAIN-SUFFIX,facebook.hu
 DOMAIN-SUFFIX,facebook.in
 DOMAIN-SUFFIX,facebook.net
 DOMAIN-SUFFIX,facebook.nl
+DOMAIN-SUFFIX,facebook.nl
 DOMAIN-SUFFIX,facebook.se
 DOMAIN-SUFFIX,facebookmail.com
 DOMAIN-SUFFIX,facebookquotes4u.com
