--- a/Chat/WeChat.conf
+++ b/Chat/WeChat.conf
@@ -92,3 +92,6 @@ IP-CIDR,183.60.159.183/32
 IP-CIDR,183.61.254.83/32
 IP-CIDR,221.181.99.30/32
 IP-CIDR,221.181.99.34/32
+
+IP-CIDR6,240e:e1:aa00:101a::48/128
+IP-CIDR6,240e:e9:6003:218::1c/128
