--- a/Chat/WeChat.conf
+++ b/Chat/WeChat.conf
@@ -97,3 +97,4 @@ IP-CIDR,221.181.99.34/32
 
 IP-CIDR6,240e:e1:aa00:101a::48/128
 IP-CIDR6,240e:e9:6003:218::1c/128
+IP-CIDR6,240e:904:3401:1001::e/128
